# game-engine

./: CMakeLists.txt  GameEngineClone.wsp  README.md
include/engine/: engine.hpp
include/engine/core/: event.hpp  renderer.hpp  texture.hpp  window.hpp
include/engine/render/: layer.hpp  manager.hpp  renderable.hpp
include/engine/util/: color.hpp  rect.hpp  vec2.hpp
src/: main.cpp
src/engine/: engine.cpp
src/engine/core/: event.cpp  renderer.cpp  texture.cpp  window.cpp
src/engine/render/: circle.cpp  layer.cpp  line.cpp  manager.cpp  rectangle.cpp  sprite.cpp  triangle.cpp
